--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <title>Calculator</title>
 </head>
 <body>
-    Hello, World!
+    <div class="main">
+        <div class="calculator">
+            <div class="display">
+                <p id="history">37 +</p>
+                <p id="current">32</p>
+            </div>
+            <div class="button__grid">
+                <button id="clear">Clear</button>
+                <button id="delete">Delete</button>
+                <button class='number__btn' id="7">7</button>
+                <button class='number__btn' id="8">8</button>
+                <button class='number__btn' id="9">9</button>
+                <button class='operator__btn' id="multiply">x</button>
+                <button class='number__btn' id="4">4</button>
+                <button class='number__btn' id="5">5</button>
+                <button class='number__btn' id="6">6</button>
+                <button class='operator__btn' id="divide">/</button>
+                <button class='number__btn' id="1">1</button>
+                <button class='number__btn' id="2">2</button>
+                <button class='number__btn' id="3">3</button>
+                <button class='operator__btn' id="add">+</button>
+                <button class='number__btn' id="decimal">.</button>
+                <button class='number__btn' id="0">0</button>
+                <button class='equal__btn' id="equal">=</button>
+                <button class='operator__btn' id="subtract">-</button>
+            </div>
+        </div>
+    </div>
+    <footer>Copyright &copy; Chris Clark</footer>
+    <script src="calculator.js" defer></script>
 </body>
 </html>
