--- a/index.html
+++ b/index.html
@@ -8,33 +8,29 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="main">
-        <div class="calculator">
-            <div class="display">
-                <p data-previous-operand id='previous-operand'>37 +</p>
-                <p data-current-operand id='current-operand'>32</p>
-            </div>
-            <div class="button-grid">
-                <button data-allClear>AC</button>
-                <button data-delete>DEL</button>
-                <button data-number>7</button>
-                <button data-number>8</button>
-                <button data-number>9</button>
-                <button data-operation>x</button>
-                <button data-number >4</button>
-                <button data-number >5</button>
-                <button data-number >6</button>
-                <button data-operation>÷</button>
-                <button data-number >1</button>
-                <button data-number >2</button>
-                <button data-number >3</button>
-                <button data-operation>+</button>
-                <button data-number>.</button>
-                <button data-number>0</button>
-                <button data-equal>=</button>
-                <button data-operation>-</button>
-            </div>
+    <div class="calculator">
+        <div class="display">
+            <div class="previous-operand">87 +</div>
+            <div class="current-operand">19</div>
         </div>
+        <button data-allClear class='span-two'>AC</button>
+        <button data-delete>DEL</button>
+        <button data-operation>÷</button>
+        <button data-number>1</button>
+        <button data-number>2</button>
+        <button data-number>3</button>
+        <button data-operation>*</button>
+        <button data-number >4</button>
+        <button data-number >5</button>
+        <button data-number >6</button>
+        <button data-operation>+</button>
+        <button data-number >7</button>
+        <button data-number >8</button>
+        <button data-number >9</button>
+        <button data-operation>-</button>
+        <button data-number>.</button>
+        <button data-number>0</button>
+        <button data-equal class='span-two'>=</button>
     </div>
     <footer>Copyright &copy; Chris Clark</footer>
     <script src="script.js" defer></script>
