--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="calculator">
         <div class="display">
-            <div class="previous-operand">87 +</div>
-            <div class="current-operand">19</div>
+            <div data-previous-operand class="previous-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
-        <button data-allClear class='span-two'>AC</button>
+        <button data-all-clear class='span-two'>AC</button>
         <button data-delete>DEL</button>
         <button data-operation>÷</button>
         <button data-number>1</button>
@@ -30,7 +30,7 @@
         <button data-operation>-</button>
         <button data-number>.</button>
         <button data-number>0</button>
-        <button data-equal class='span-two'>=</button>
+        <button data-equals class='span-two'>=</button>
     </div>
     <footer>Copyright &copy; Chris Clark</footer>
     <script src="script.js" defer></script>
